[package]
edition      = "2024"
name         = "opto"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "opto"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.11.0", features = ["esp32c3"] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }

critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
